<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/back_btn"
        android:textSize="14sp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>

        <TextView
            android:text="Beacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beacon_heading"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ibeacon_icon"
            android:scaleType="centerInside"
            android:contentDescription="@string/beacon"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/beaconname"
                android:gravity="center"
                android:text="@string/beaconname"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/beaconmacadd"
                android:gravity="center"
                android:text="@string/beaconmac"/>
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1"
        android:id="@+id/beacondevicedata"/>

</LinearLayout>